--- a/win/lib/SDL2_mixer-2.6.3/CHANGES.txt
+++ b/win/lib/SDL2_mixer-2.6.3/CHANGES.txt
@@ -1,4 +1,11 @@
+2.6.2:
+ * Updated autotools to use ax_compute_relative_paths, fixing homebrew on macOS
+
+2.6.1:
+ * Fixed issue with incorrect version reported by pkg-config
+
 2.6.0:
+ * Added support for building with CMake
  * Added support for playing Ogg files using stb_vorbis, which is now the default Vorbis backend.
    To use libvorbis instead, configure using --disable-music-ogg-stb --enable-music-ogg-vorbis
  * Added support for playing FLAC files using dr_flac, which is now the default FLAC music backend.
